// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`valuation fixtures -> engine POST body > maps after_10.json to stable engine payload 1`] = `
{
  "budget_by_team_id": {
    "team_1": 242,
    "team_10": 246,
    "team_11": 245,
    "team_12": 260,
    "team_2": 254,
    "team_3": 253,
    "team_4": 252,
    "team_5": 251,
    "team_6": 250,
    "team_7": 249,
    "team_8": 248,
    "team_9": 247,
  },
  "checkpoint": "after_pick_10",
  "deterministic": true,
  "drafted_players": [
    {
      "is_keeper": true,
      "name": "Sample Keeper",
      "paid": 18,
      "player_id": "660271",
      "position": "1B",
      "positions": [
        "1B",
      ],
      "roster_slot": "1B",
      "team": "TOR",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 1",
      "paid": 6,
      "pick_number": 1,
      "player_id": "660001",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 2",
      "paid": 7,
      "pick_number": 2,
      "player_id": "660002",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 3",
      "paid": 8,
      "pick_number": 3,
      "player_id": "660003",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 4",
      "paid": 9,
      "pick_number": 4,
      "player_id": "660004",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 5",
      "paid": 10,
      "pick_number": 5,
      "player_id": "660005",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 6",
      "paid": 11,
      "pick_number": 6,
      "player_id": "660006",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 7",
      "paid": 12,
      "pick_number": 7,
      "player_id": "660007",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 8",
      "paid": 13,
      "pick_number": 8,
      "player_id": "660008",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 9",
      "paid": 14,
      "pick_number": 9,
      "player_id": "660009",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 10",
      "paid": 15,
      "pick_number": 10,
      "player_id": "660010",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
  ],
  "hitter_budget_pct": 70,
  "league_scope": "Mixed",
  "num_teams": 12,
  "pos_eligibility_threshold": 20,
  "roster_slots": [
    {
      "count": 1,
      "position": "C",
    },
    {
      "count": 1,
      "position": "1B",
    },
    {
      "count": 1,
      "position": "2B",
    },
    {
      "count": 1,
      "position": "3B",
    },
    {
      "count": 1,
      "position": "SS",
    },
    {
      "count": 3,
      "position": "OF",
    },
    {
      "count": 1,
      "position": "UTIL",
    },
    {
      "count": 2,
      "position": "SP",
    },
    {
      "count": 2,
      "position": "RP",
    },
    {
      "count": 3,
      "position": "P",
    },
    {
      "count": 5,
      "position": "BN",
    },
  ],
  "schema_version": "1.0.0",
  "scoring_categories": [
    {
      "name": "R",
      "type": "batting",
    },
    {
      "name": "HR",
      "type": "batting",
    },
    {
      "name": "RBI",
      "type": "batting",
    },
    {
      "name": "SB",
      "type": "batting",
    },
    {
      "name": "AVG",
      "type": "batting",
    },
    {
      "name": "W",
      "type": "pitching",
    },
    {
      "name": "SV",
      "type": "pitching",
    },
    {
      "name": "K",
      "type": "pitching",
    },
    {
      "name": "ERA",
      "type": "pitching",
    },
    {
      "name": "WHIP",
      "type": "pitching",
    },
  ],
  "scoring_format": "5x5",
  "seed": 42,
  "total_budget": 260,
}
`;

exports[`valuation fixtures -> engine POST body > maps after_50.json to stable engine payload 1`] = `
{
  "budget_by_team_id": {
    "team_1": 162,
    "team_10": 192,
    "team_11": 188,
    "team_12": 184,
    "team_2": 170,
    "team_3": 165,
    "team_4": 186,
    "team_5": 182,
    "team_6": 178,
    "team_7": 204,
    "team_8": 200,
    "team_9": 196,
  },
  "checkpoint": "after_pick_50",
  "deterministic": true,
  "drafted_players": [
    {
      "is_keeper": true,
      "name": "Sample Keeper",
      "paid": 18,
      "player_id": "660271",
      "position": "1B",
      "positions": [
        "1B",
      ],
      "roster_slot": "1B",
      "team": "TOR",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 1",
      "paid": 6,
      "pick_number": 1,
      "player_id": "660001",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 2",
      "paid": 7,
      "pick_number": 2,
      "player_id": "660002",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 3",
      "paid": 8,
      "pick_number": 3,
      "player_id": "660003",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 4",
      "paid": 9,
      "pick_number": 4,
      "player_id": "660004",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 5",
      "paid": 10,
      "pick_number": 5,
      "player_id": "660005",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 6",
      "paid": 11,
      "pick_number": 6,
      "player_id": "660006",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 7",
      "paid": 12,
      "pick_number": 7,
      "player_id": "660007",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 8",
      "paid": 13,
      "pick_number": 8,
      "player_id": "660008",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 9",
      "paid": 14,
      "pick_number": 9,
      "player_id": "660009",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 10",
      "paid": 15,
      "pick_number": 10,
      "player_id": "660010",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 11",
      "paid": 16,
      "pick_number": 11,
      "player_id": "660011",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 12",
      "paid": 17,
      "pick_number": 12,
      "player_id": "660012",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 13",
      "paid": 18,
      "pick_number": 13,
      "player_id": "660013",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 14",
      "paid": 19,
      "pick_number": 14,
      "player_id": "660014",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 15",
      "paid": 20,
      "pick_number": 15,
      "player_id": "660015",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 16",
      "paid": 21,
      "pick_number": 16,
      "player_id": "660016",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 17",
      "paid": 22,
      "pick_number": 17,
      "player_id": "660017",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 18",
      "paid": 23,
      "pick_number": 18,
      "player_id": "660018",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 19",
      "paid": 24,
      "pick_number": 19,
      "player_id": "660019",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 20",
      "paid": 25,
      "pick_number": 20,
      "player_id": "660020",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 21",
      "paid": 26,
      "pick_number": 21,
      "player_id": "660021",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 22",
      "paid": 27,
      "pick_number": 22,
      "player_id": "660022",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 23",
      "paid": 28,
      "pick_number": 23,
      "player_id": "660023",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 24",
      "paid": 29,
      "pick_number": 24,
      "player_id": "660024",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 25",
      "paid": 30,
      "pick_number": 25,
      "player_id": "660025",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 26",
      "paid": 31,
      "pick_number": 26,
      "player_id": "660026",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 27",
      "paid": 32,
      "pick_number": 27,
      "player_id": "660027",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 28",
      "paid": 33,
      "pick_number": 28,
      "player_id": "660028",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 29",
      "paid": 34,
      "pick_number": 29,
      "player_id": "660029",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 30",
      "paid": 5,
      "pick_number": 30,
      "player_id": "660030",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 31",
      "paid": 6,
      "pick_number": 31,
      "player_id": "660031",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 32",
      "paid": 7,
      "pick_number": 32,
      "player_id": "660032",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 33",
      "paid": 8,
      "pick_number": 33,
      "player_id": "660033",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 34",
      "paid": 9,
      "pick_number": 34,
      "player_id": "660034",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 35",
      "paid": 10,
      "pick_number": 35,
      "player_id": "660035",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 36",
      "paid": 11,
      "pick_number": 36,
      "player_id": "660036",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 37",
      "paid": 12,
      "pick_number": 37,
      "player_id": "660037",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 38",
      "paid": 13,
      "pick_number": 38,
      "player_id": "660038",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 39",
      "paid": 14,
      "pick_number": 39,
      "player_id": "660039",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 40",
      "paid": 15,
      "pick_number": 40,
      "player_id": "660040",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 41",
      "paid": 16,
      "pick_number": 41,
      "player_id": "660041",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 42",
      "paid": 17,
      "pick_number": 42,
      "player_id": "660042",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 43",
      "paid": 18,
      "pick_number": 43,
      "player_id": "660043",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 44",
      "paid": 19,
      "pick_number": 44,
      "player_id": "660044",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 45",
      "paid": 20,
      "pick_number": 45,
      "player_id": "660045",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 46",
      "paid": 21,
      "pick_number": 46,
      "player_id": "660046",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 47",
      "paid": 22,
      "pick_number": 47,
      "player_id": "660047",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 48",
      "paid": 23,
      "pick_number": 48,
      "player_id": "660048",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 49",
      "paid": 24,
      "pick_number": 49,
      "player_id": "660049",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 50",
      "paid": 25,
      "pick_number": 50,
      "player_id": "660050",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
  ],
  "hitter_budget_pct": 70,
  "league_scope": "Mixed",
  "num_teams": 12,
  "pos_eligibility_threshold": 20,
  "roster_slots": [
    {
      "count": 1,
      "position": "C",
    },
    {
      "count": 1,
      "position": "1B",
    },
    {
      "count": 1,
      "position": "2B",
    },
    {
      "count": 1,
      "position": "3B",
    },
    {
      "count": 1,
      "position": "SS",
    },
    {
      "count": 3,
      "position": "OF",
    },
    {
      "count": 1,
      "position": "UTIL",
    },
    {
      "count": 2,
      "position": "SP",
    },
    {
      "count": 2,
      "position": "RP",
    },
    {
      "count": 3,
      "position": "P",
    },
    {
      "count": 5,
      "position": "BN",
    },
  ],
  "schema_version": "1.0.0",
  "scoring_categories": [
    {
      "name": "R",
      "type": "batting",
    },
    {
      "name": "HR",
      "type": "batting",
    },
    {
      "name": "RBI",
      "type": "batting",
    },
    {
      "name": "SB",
      "type": "batting",
    },
    {
      "name": "AVG",
      "type": "batting",
    },
    {
      "name": "W",
      "type": "pitching",
    },
    {
      "name": "SV",
      "type": "pitching",
    },
    {
      "name": "K",
      "type": "pitching",
    },
    {
      "name": "ERA",
      "type": "pitching",
    },
    {
      "name": "WHIP",
      "type": "pitching",
    },
  ],
  "scoring_format": "5x5",
  "seed": 42,
  "total_budget": 260,
}
`;

exports[`valuation fixtures -> engine POST body > maps after_100.json to stable engine payload 1`] = `
{
  "budget_by_team_id": {
    "team_1": 100,
    "team_10": 112,
    "team_11": 104,
    "team_12": 96,
    "team_2": 104,
    "team_3": 95,
    "team_4": 86,
    "team_5": 77,
    "team_6": 84,
    "team_7": 136,
    "team_8": 128,
    "team_9": 120,
  },
  "checkpoint": "after_pick_100",
  "deterministic": true,
  "drafted_players": [
    {
      "is_keeper": true,
      "name": "Sample Keeper",
      "paid": 18,
      "player_id": "660271",
      "position": "1B",
      "positions": [
        "1B",
      ],
      "roster_slot": "1B",
      "team": "TOR",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 1",
      "paid": 6,
      "pick_number": 1,
      "player_id": "660001",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 2",
      "paid": 7,
      "pick_number": 2,
      "player_id": "660002",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 3",
      "paid": 8,
      "pick_number": 3,
      "player_id": "660003",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 4",
      "paid": 9,
      "pick_number": 4,
      "player_id": "660004",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 5",
      "paid": 10,
      "pick_number": 5,
      "player_id": "660005",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 6",
      "paid": 11,
      "pick_number": 6,
      "player_id": "660006",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 7",
      "paid": 12,
      "pick_number": 7,
      "player_id": "660007",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 8",
      "paid": 13,
      "pick_number": 8,
      "player_id": "660008",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 9",
      "paid": 14,
      "pick_number": 9,
      "player_id": "660009",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 10",
      "paid": 15,
      "pick_number": 10,
      "player_id": "660010",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 11",
      "paid": 16,
      "pick_number": 11,
      "player_id": "660011",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 12",
      "paid": 17,
      "pick_number": 12,
      "player_id": "660012",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 13",
      "paid": 18,
      "pick_number": 13,
      "player_id": "660013",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 14",
      "paid": 19,
      "pick_number": 14,
      "player_id": "660014",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 15",
      "paid": 20,
      "pick_number": 15,
      "player_id": "660015",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 16",
      "paid": 21,
      "pick_number": 16,
      "player_id": "660016",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 17",
      "paid": 22,
      "pick_number": 17,
      "player_id": "660017",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 18",
      "paid": 23,
      "pick_number": 18,
      "player_id": "660018",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 19",
      "paid": 24,
      "pick_number": 19,
      "player_id": "660019",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 20",
      "paid": 25,
      "pick_number": 20,
      "player_id": "660020",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 21",
      "paid": 26,
      "pick_number": 21,
      "player_id": "660021",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 22",
      "paid": 27,
      "pick_number": 22,
      "player_id": "660022",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 23",
      "paid": 28,
      "pick_number": 23,
      "player_id": "660023",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 24",
      "paid": 29,
      "pick_number": 24,
      "player_id": "660024",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 25",
      "paid": 30,
      "pick_number": 25,
      "player_id": "660025",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 26",
      "paid": 31,
      "pick_number": 26,
      "player_id": "660026",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 27",
      "paid": 32,
      "pick_number": 27,
      "player_id": "660027",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 28",
      "paid": 33,
      "pick_number": 28,
      "player_id": "660028",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 29",
      "paid": 34,
      "pick_number": 29,
      "player_id": "660029",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 30",
      "paid": 5,
      "pick_number": 30,
      "player_id": "660030",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 31",
      "paid": 6,
      "pick_number": 31,
      "player_id": "660031",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 32",
      "paid": 7,
      "pick_number": 32,
      "player_id": "660032",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 33",
      "paid": 8,
      "pick_number": 33,
      "player_id": "660033",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 34",
      "paid": 9,
      "pick_number": 34,
      "player_id": "660034",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 35",
      "paid": 10,
      "pick_number": 35,
      "player_id": "660035",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 36",
      "paid": 11,
      "pick_number": 36,
      "player_id": "660036",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 37",
      "paid": 12,
      "pick_number": 37,
      "player_id": "660037",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 38",
      "paid": 13,
      "pick_number": 38,
      "player_id": "660038",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 39",
      "paid": 14,
      "pick_number": 39,
      "player_id": "660039",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 40",
      "paid": 15,
      "pick_number": 40,
      "player_id": "660040",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 41",
      "paid": 16,
      "pick_number": 41,
      "player_id": "660041",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 42",
      "paid": 17,
      "pick_number": 42,
      "player_id": "660042",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 43",
      "paid": 18,
      "pick_number": 43,
      "player_id": "660043",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 44",
      "paid": 19,
      "pick_number": 44,
      "player_id": "660044",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 45",
      "paid": 20,
      "pick_number": 45,
      "player_id": "660045",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 46",
      "paid": 21,
      "pick_number": 46,
      "player_id": "660046",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 47",
      "paid": 22,
      "pick_number": 47,
      "player_id": "660047",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 48",
      "paid": 23,
      "pick_number": 48,
      "player_id": "660048",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 49",
      "paid": 24,
      "pick_number": 49,
      "player_id": "660049",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 50",
      "paid": 25,
      "pick_number": 50,
      "player_id": "660050",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 51",
      "paid": 26,
      "pick_number": 51,
      "player_id": "660051",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 52",
      "paid": 27,
      "pick_number": 52,
      "player_id": "660052",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 53",
      "paid": 28,
      "pick_number": 53,
      "player_id": "660053",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 54",
      "paid": 29,
      "pick_number": 54,
      "player_id": "660054",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 55",
      "paid": 30,
      "pick_number": 55,
      "player_id": "660055",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 56",
      "paid": 31,
      "pick_number": 56,
      "player_id": "660056",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 57",
      "paid": 32,
      "pick_number": 57,
      "player_id": "660057",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 58",
      "paid": 33,
      "pick_number": 58,
      "player_id": "660058",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 59",
      "paid": 34,
      "pick_number": 59,
      "player_id": "660059",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 60",
      "paid": 5,
      "pick_number": 60,
      "player_id": "660060",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 61",
      "paid": 6,
      "pick_number": 61,
      "player_id": "660061",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 62",
      "paid": 7,
      "pick_number": 62,
      "player_id": "660062",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 63",
      "paid": 8,
      "pick_number": 63,
      "player_id": "660063",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 64",
      "paid": 9,
      "pick_number": 64,
      "player_id": "660064",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 65",
      "paid": 10,
      "pick_number": 65,
      "player_id": "660065",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 66",
      "paid": 11,
      "pick_number": 66,
      "player_id": "660066",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 67",
      "paid": 12,
      "pick_number": 67,
      "player_id": "660067",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 68",
      "paid": 13,
      "pick_number": 68,
      "player_id": "660068",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 69",
      "paid": 14,
      "pick_number": 69,
      "player_id": "660069",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 70",
      "paid": 15,
      "pick_number": 70,
      "player_id": "660070",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 71",
      "paid": 16,
      "pick_number": 71,
      "player_id": "660071",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 72",
      "paid": 17,
      "pick_number": 72,
      "player_id": "660072",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 73",
      "paid": 18,
      "pick_number": 73,
      "player_id": "660073",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 74",
      "paid": 19,
      "pick_number": 74,
      "player_id": "660074",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 75",
      "paid": 20,
      "pick_number": 75,
      "player_id": "660075",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 76",
      "paid": 21,
      "pick_number": 76,
      "player_id": "660076",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 77",
      "paid": 22,
      "pick_number": 77,
      "player_id": "660077",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 78",
      "paid": 23,
      "pick_number": 78,
      "player_id": "660078",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 79",
      "paid": 24,
      "pick_number": 79,
      "player_id": "660079",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 80",
      "paid": 25,
      "pick_number": 80,
      "player_id": "660080",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 81",
      "paid": 26,
      "pick_number": 81,
      "player_id": "660081",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 82",
      "paid": 27,
      "pick_number": 82,
      "player_id": "660082",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 83",
      "paid": 28,
      "pick_number": 83,
      "player_id": "660083",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 84",
      "paid": 29,
      "pick_number": 84,
      "player_id": "660084",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 85",
      "paid": 30,
      "pick_number": 85,
      "player_id": "660085",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 86",
      "paid": 31,
      "pick_number": 86,
      "player_id": "660086",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 87",
      "paid": 32,
      "pick_number": 87,
      "player_id": "660087",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 88",
      "paid": 33,
      "pick_number": 88,
      "player_id": "660088",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 89",
      "paid": 34,
      "pick_number": 89,
      "player_id": "660089",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 90",
      "paid": 5,
      "pick_number": 90,
      "player_id": "660090",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 91",
      "paid": 6,
      "pick_number": 91,
      "player_id": "660091",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 92",
      "paid": 7,
      "pick_number": 92,
      "player_id": "660092",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 93",
      "paid": 8,
      "pick_number": 93,
      "player_id": "660093",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 94",
      "paid": 9,
      "pick_number": 94,
      "player_id": "660094",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 95",
      "paid": 10,
      "pick_number": 95,
      "player_id": "660095",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 96",
      "paid": 11,
      "pick_number": 96,
      "player_id": "660096",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 97",
      "paid": 12,
      "pick_number": 97,
      "player_id": "660097",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 98",
      "paid": 13,
      "pick_number": 98,
      "player_id": "660098",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 99",
      "paid": 14,
      "pick_number": 99,
      "player_id": "660099",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 100",
      "paid": 15,
      "pick_number": 100,
      "player_id": "660100",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
  ],
  "hitter_budget_pct": 70,
  "league_scope": "Mixed",
  "num_teams": 12,
  "pos_eligibility_threshold": 20,
  "roster_slots": [
    {
      "count": 1,
      "position": "C",
    },
    {
      "count": 1,
      "position": "1B",
    },
    {
      "count": 1,
      "position": "2B",
    },
    {
      "count": 1,
      "position": "3B",
    },
    {
      "count": 1,
      "position": "SS",
    },
    {
      "count": 3,
      "position": "OF",
    },
    {
      "count": 1,
      "position": "UTIL",
    },
    {
      "count": 2,
      "position": "SP",
    },
    {
      "count": 2,
      "position": "RP",
    },
    {
      "count": 3,
      "position": "P",
    },
    {
      "count": 5,
      "position": "BN",
    },
  ],
  "schema_version": "1.0.0",
  "scoring_categories": [
    {
      "name": "R",
      "type": "batting",
    },
    {
      "name": "HR",
      "type": "batting",
    },
    {
      "name": "RBI",
      "type": "batting",
    },
    {
      "name": "SB",
      "type": "batting",
    },
    {
      "name": "AVG",
      "type": "batting",
    },
    {
      "name": "W",
      "type": "pitching",
    },
    {
      "name": "SV",
      "type": "pitching",
    },
    {
      "name": "K",
      "type": "pitching",
    },
    {
      "name": "ERA",
      "type": "pitching",
    },
    {
      "name": "WHIP",
      "type": "pitching",
    },
  ],
  "scoring_format": "5x5",
  "seed": 42,
  "total_budget": 260,
}
`;

exports[`valuation fixtures -> engine POST body > maps after_130.json to stable engine payload 1`] = `
{
  "budget_by_team_id": {
    "team_1": 72,
    "team_10": 46,
    "team_11": 35,
    "team_12": 40,
    "team_2": 74,
    "team_3": 63,
    "team_4": 52,
    "team_5": 41,
    "team_6": 30,
    "team_7": 79,
    "team_8": 68,
    "team_9": 57,
  },
  "checkpoint": "after_pick_130",
  "deterministic": true,
  "drafted_players": [
    {
      "is_keeper": true,
      "name": "Sample Keeper",
      "paid": 18,
      "player_id": "660271",
      "position": "1B",
      "positions": [
        "1B",
      ],
      "roster_slot": "1B",
      "team": "TOR",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 1",
      "paid": 6,
      "pick_number": 1,
      "player_id": "660001",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 2",
      "paid": 7,
      "pick_number": 2,
      "player_id": "660002",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 3",
      "paid": 8,
      "pick_number": 3,
      "player_id": "660003",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 4",
      "paid": 9,
      "pick_number": 4,
      "player_id": "660004",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 5",
      "paid": 10,
      "pick_number": 5,
      "player_id": "660005",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 6",
      "paid": 11,
      "pick_number": 6,
      "player_id": "660006",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 7",
      "paid": 12,
      "pick_number": 7,
      "player_id": "660007",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 8",
      "paid": 13,
      "pick_number": 8,
      "player_id": "660008",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 9",
      "paid": 14,
      "pick_number": 9,
      "player_id": "660009",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 10",
      "paid": 15,
      "pick_number": 10,
      "player_id": "660010",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 11",
      "paid": 16,
      "pick_number": 11,
      "player_id": "660011",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 12",
      "paid": 17,
      "pick_number": 12,
      "player_id": "660012",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 13",
      "paid": 18,
      "pick_number": 13,
      "player_id": "660013",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 14",
      "paid": 19,
      "pick_number": 14,
      "player_id": "660014",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 15",
      "paid": 20,
      "pick_number": 15,
      "player_id": "660015",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 16",
      "paid": 21,
      "pick_number": 16,
      "player_id": "660016",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 17",
      "paid": 22,
      "pick_number": 17,
      "player_id": "660017",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 18",
      "paid": 23,
      "pick_number": 18,
      "player_id": "660018",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 19",
      "paid": 24,
      "pick_number": 19,
      "player_id": "660019",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 20",
      "paid": 25,
      "pick_number": 20,
      "player_id": "660020",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 21",
      "paid": 26,
      "pick_number": 21,
      "player_id": "660021",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 22",
      "paid": 27,
      "pick_number": 22,
      "player_id": "660022",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 23",
      "paid": 28,
      "pick_number": 23,
      "player_id": "660023",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 24",
      "paid": 29,
      "pick_number": 24,
      "player_id": "660024",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 25",
      "paid": 30,
      "pick_number": 25,
      "player_id": "660025",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 26",
      "paid": 31,
      "pick_number": 26,
      "player_id": "660026",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 27",
      "paid": 32,
      "pick_number": 27,
      "player_id": "660027",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 28",
      "paid": 33,
      "pick_number": 28,
      "player_id": "660028",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 29",
      "paid": 34,
      "pick_number": 29,
      "player_id": "660029",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 30",
      "paid": 5,
      "pick_number": 30,
      "player_id": "660030",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 31",
      "paid": 6,
      "pick_number": 31,
      "player_id": "660031",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 32",
      "paid": 7,
      "pick_number": 32,
      "player_id": "660032",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 33",
      "paid": 8,
      "pick_number": 33,
      "player_id": "660033",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 34",
      "paid": 9,
      "pick_number": 34,
      "player_id": "660034",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 35",
      "paid": 10,
      "pick_number": 35,
      "player_id": "660035",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 36",
      "paid": 11,
      "pick_number": 36,
      "player_id": "660036",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 37",
      "paid": 12,
      "pick_number": 37,
      "player_id": "660037",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 38",
      "paid": 13,
      "pick_number": 38,
      "player_id": "660038",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 39",
      "paid": 14,
      "pick_number": 39,
      "player_id": "660039",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 40",
      "paid": 15,
      "pick_number": 40,
      "player_id": "660040",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 41",
      "paid": 16,
      "pick_number": 41,
      "player_id": "660041",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 42",
      "paid": 17,
      "pick_number": 42,
      "player_id": "660042",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 43",
      "paid": 18,
      "pick_number": 43,
      "player_id": "660043",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 44",
      "paid": 19,
      "pick_number": 44,
      "player_id": "660044",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 45",
      "paid": 20,
      "pick_number": 45,
      "player_id": "660045",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 46",
      "paid": 21,
      "pick_number": 46,
      "player_id": "660046",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 47",
      "paid": 22,
      "pick_number": 47,
      "player_id": "660047",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 48",
      "paid": 23,
      "pick_number": 48,
      "player_id": "660048",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 49",
      "paid": 24,
      "pick_number": 49,
      "player_id": "660049",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 50",
      "paid": 25,
      "pick_number": 50,
      "player_id": "660050",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 51",
      "paid": 26,
      "pick_number": 51,
      "player_id": "660051",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 52",
      "paid": 27,
      "pick_number": 52,
      "player_id": "660052",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 53",
      "paid": 28,
      "pick_number": 53,
      "player_id": "660053",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 54",
      "paid": 29,
      "pick_number": 54,
      "player_id": "660054",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 55",
      "paid": 30,
      "pick_number": 55,
      "player_id": "660055",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 56",
      "paid": 31,
      "pick_number": 56,
      "player_id": "660056",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 57",
      "paid": 32,
      "pick_number": 57,
      "player_id": "660057",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 58",
      "paid": 33,
      "pick_number": 58,
      "player_id": "660058",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 59",
      "paid": 34,
      "pick_number": 59,
      "player_id": "660059",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 60",
      "paid": 5,
      "pick_number": 60,
      "player_id": "660060",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 61",
      "paid": 6,
      "pick_number": 61,
      "player_id": "660061",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 62",
      "paid": 7,
      "pick_number": 62,
      "player_id": "660062",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 63",
      "paid": 8,
      "pick_number": 63,
      "player_id": "660063",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 64",
      "paid": 9,
      "pick_number": 64,
      "player_id": "660064",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 65",
      "paid": 10,
      "pick_number": 65,
      "player_id": "660065",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 66",
      "paid": 11,
      "pick_number": 66,
      "player_id": "660066",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 67",
      "paid": 12,
      "pick_number": 67,
      "player_id": "660067",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 68",
      "paid": 13,
      "pick_number": 68,
      "player_id": "660068",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 69",
      "paid": 14,
      "pick_number": 69,
      "player_id": "660069",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 70",
      "paid": 15,
      "pick_number": 70,
      "player_id": "660070",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 71",
      "paid": 16,
      "pick_number": 71,
      "player_id": "660071",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 72",
      "paid": 17,
      "pick_number": 72,
      "player_id": "660072",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 73",
      "paid": 18,
      "pick_number": 73,
      "player_id": "660073",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 74",
      "paid": 19,
      "pick_number": 74,
      "player_id": "660074",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 75",
      "paid": 20,
      "pick_number": 75,
      "player_id": "660075",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 76",
      "paid": 21,
      "pick_number": 76,
      "player_id": "660076",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 77",
      "paid": 22,
      "pick_number": 77,
      "player_id": "660077",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 78",
      "paid": 23,
      "pick_number": 78,
      "player_id": "660078",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 79",
      "paid": 24,
      "pick_number": 79,
      "player_id": "660079",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 80",
      "paid": 25,
      "pick_number": 80,
      "player_id": "660080",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 81",
      "paid": 26,
      "pick_number": 81,
      "player_id": "660081",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 82",
      "paid": 27,
      "pick_number": 82,
      "player_id": "660082",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 83",
      "paid": 28,
      "pick_number": 83,
      "player_id": "660083",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 84",
      "paid": 29,
      "pick_number": 84,
      "player_id": "660084",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 85",
      "paid": 30,
      "pick_number": 85,
      "player_id": "660085",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 86",
      "paid": 31,
      "pick_number": 86,
      "player_id": "660086",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 87",
      "paid": 32,
      "pick_number": 87,
      "player_id": "660087",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 88",
      "paid": 33,
      "pick_number": 88,
      "player_id": "660088",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 89",
      "paid": 34,
      "pick_number": 89,
      "player_id": "660089",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 90",
      "paid": 5,
      "pick_number": 90,
      "player_id": "660090",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 91",
      "paid": 6,
      "pick_number": 91,
      "player_id": "660091",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 92",
      "paid": 7,
      "pick_number": 92,
      "player_id": "660092",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 93",
      "paid": 8,
      "pick_number": 93,
      "player_id": "660093",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 94",
      "paid": 9,
      "pick_number": 94,
      "player_id": "660094",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 95",
      "paid": 10,
      "pick_number": 95,
      "player_id": "660095",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 96",
      "paid": 11,
      "pick_number": 96,
      "player_id": "660096",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 97",
      "paid": 12,
      "pick_number": 97,
      "player_id": "660097",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 98",
      "paid": 13,
      "pick_number": 98,
      "player_id": "660098",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 99",
      "paid": 14,
      "pick_number": 99,
      "player_id": "660099",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 100",
      "paid": 15,
      "pick_number": 100,
      "player_id": "660100",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 101",
      "paid": 16,
      "pick_number": 101,
      "player_id": "660101",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 102",
      "paid": 17,
      "pick_number": 102,
      "player_id": "660102",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 103",
      "paid": 18,
      "pick_number": 103,
      "player_id": "660103",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 104",
      "paid": 19,
      "pick_number": 104,
      "player_id": "660104",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 105",
      "paid": 20,
      "pick_number": 105,
      "player_id": "660105",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 106",
      "paid": 21,
      "pick_number": 106,
      "player_id": "660106",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 107",
      "paid": 22,
      "pick_number": 107,
      "player_id": "660107",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 108",
      "paid": 23,
      "pick_number": 108,
      "player_id": "660108",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 109",
      "paid": 24,
      "pick_number": 109,
      "player_id": "660109",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 110",
      "paid": 25,
      "pick_number": 110,
      "player_id": "660110",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 111",
      "paid": 26,
      "pick_number": 111,
      "player_id": "660111",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 112",
      "paid": 27,
      "pick_number": 112,
      "player_id": "660112",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 113",
      "paid": 28,
      "pick_number": 113,
      "player_id": "660113",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 114",
      "paid": 29,
      "pick_number": 114,
      "player_id": "660114",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 115",
      "paid": 30,
      "pick_number": 115,
      "player_id": "660115",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 116",
      "paid": 31,
      "pick_number": 116,
      "player_id": "660116",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 117",
      "paid": 32,
      "pick_number": 117,
      "player_id": "660117",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 118",
      "paid": 33,
      "pick_number": 118,
      "player_id": "660118",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 119",
      "paid": 34,
      "pick_number": 119,
      "player_id": "660119",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_12",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 120",
      "paid": 5,
      "pick_number": 120,
      "player_id": "660120",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_1",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 121",
      "paid": 6,
      "pick_number": 121,
      "player_id": "660121",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_2",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 122",
      "paid": 7,
      "pick_number": 122,
      "player_id": "660122",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_3",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 123",
      "paid": 8,
      "pick_number": 123,
      "player_id": "660123",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_4",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 124",
      "paid": 9,
      "pick_number": 124,
      "player_id": "660124",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_5",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 125",
      "paid": 10,
      "pick_number": 125,
      "player_id": "660125",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_6",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 126",
      "paid": 11,
      "pick_number": 126,
      "player_id": "660126",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_7",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 127",
      "paid": 12,
      "pick_number": 127,
      "player_id": "660127",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_8",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 128",
      "paid": 13,
      "pick_number": 128,
      "player_id": "660128",
      "position": "SP",
      "positions": [
        "SP",
      ],
      "roster_slot": "SP1",
      "team": "NYY",
      "team_id": "team_9",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 129",
      "paid": 14,
      "pick_number": 129,
      "player_id": "660129",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_10",
    },
    {
      "is_keeper": false,
      "name": "Sample Player 130",
      "paid": 15,
      "pick_number": 130,
      "player_id": "660130",
      "position": "OF",
      "positions": [
        "OF",
      ],
      "roster_slot": "OF1",
      "team": "NYY",
      "team_id": "team_11",
    },
  ],
  "hitter_budget_pct": 70,
  "league_scope": "Mixed",
  "num_teams": 12,
  "pos_eligibility_threshold": 20,
  "roster_slots": [
    {
      "count": 1,
      "position": "C",
    },
    {
      "count": 1,
      "position": "1B",
    },
    {
      "count": 1,
      "position": "2B",
    },
    {
      "count": 1,
      "position": "3B",
    },
    {
      "count": 1,
      "position": "SS",
    },
    {
      "count": 3,
      "position": "OF",
    },
    {
      "count": 1,
      "position": "UTIL",
    },
    {
      "count": 2,
      "position": "SP",
    },
    {
      "count": 2,
      "position": "RP",
    },
    {
      "count": 3,
      "position": "P",
    },
    {
      "count": 5,
      "position": "BN",
    },
  ],
  "schema_version": "1.0.0",
  "scoring_categories": [
    {
      "name": "R",
      "type": "batting",
    },
    {
      "name": "HR",
      "type": "batting",
    },
    {
      "name": "RBI",
      "type": "batting",
    },
    {
      "name": "SB",
      "type": "batting",
    },
    {
      "name": "AVG",
      "type": "batting",
    },
    {
      "name": "W",
      "type": "pitching",
    },
    {
      "name": "SV",
      "type": "pitching",
    },
    {
      "name": "K",
      "type": "pitching",
    },
    {
      "name": "ERA",
      "type": "pitching",
    },
    {
      "name": "WHIP",
      "type": "pitching",
    },
  ],
  "scoring_format": "5x5",
  "seed": 42,
  "total_budget": 260,
}
`;

exports[`valuation fixtures -> engine POST body > maps pre_draft.json to stable engine payload 1`] = `
{
  "budget_by_team_id": {
    "team_1": 242,
    "team_10": 260,
    "team_11": 260,
    "team_12": 260,
    "team_2": 260,
    "team_3": 260,
    "team_4": 260,
    "team_5": 260,
    "team_6": 260,
    "team_7": 260,
    "team_8": 260,
    "team_9": 260,
  },
  "checkpoint": "pre_draft",
  "deterministic": true,
  "drafted_players": [
    {
      "is_keeper": true,
      "name": "Sample Keeper",
      "paid": 18,
      "player_id": "660271",
      "position": "1B",
      "positions": [
        "1B",
      ],
      "roster_slot": "1B",
      "team": "TOR",
      "team_id": "team_1",
    },
  ],
  "hitter_budget_pct": 70,
  "league_scope": "Mixed",
  "num_teams": 12,
  "pos_eligibility_threshold": 20,
  "roster_slots": [
    {
      "count": 1,
      "position": "C",
    },
    {
      "count": 1,
      "position": "1B",
    },
    {
      "count": 1,
      "position": "2B",
    },
    {
      "count": 1,
      "position": "3B",
    },
    {
      "count": 1,
      "position": "SS",
    },
    {
      "count": 3,
      "position": "OF",
    },
    {
      "count": 1,
      "position": "UTIL",
    },
    {
      "count": 2,
      "position": "SP",
    },
    {
      "count": 2,
      "position": "RP",
    },
    {
      "count": 3,
      "position": "P",
    },
    {
      "count": 5,
      "position": "BN",
    },
  ],
  "schema_version": "1.0.0",
  "scoring_categories": [
    {
      "name": "R",
      "type": "batting",
    },
    {
      "name": "HR",
      "type": "batting",
    },
    {
      "name": "RBI",
      "type": "batting",
    },
    {
      "name": "SB",
      "type": "batting",
    },
    {
      "name": "AVG",
      "type": "batting",
    },
    {
      "name": "W",
      "type": "pitching",
    },
    {
      "name": "SV",
      "type": "pitching",
    },
    {
      "name": "K",
      "type": "pitching",
    },
    {
      "name": "ERA",
      "type": "pitching",
    },
    {
      "name": "WHIP",
      "type": "pitching",
    },
  ],
  "scoring_format": "5x5",
  "seed": 42,
  "total_budget": 260,
}
`;
